# sputnik

./: .gitmodules  license.txt  readme.txt
concept_art/: screen-1.psd
documentation/: .gitignore
documentation/evaluation/: evaluation-form.tex  likert-4.ai  likert-5.ai  quantitative.tex  quantitive.tex
documentation/evaluation/result/: QUIS-data.txt  stripchart.ai
documentation/notes/: sputnik notes  suptnik report outline.txt  survey
documentation/project_proposal/: .gitignore  library.bib  prelim-literature.tex  sputnik_protposal.tex
documentation/report/: related-work.bib  sputnik_report.tex
documentation/report/img/: illustrations.ai  sputnik overview.ai
project_proposal/: sputnik_protposal.tex
sound/pd/: demodage.pd  pd -> skype.jks  readme.txt  test.pd
sputnik/: CMakeLists.txt  Doxyfile.in
sputnik/cmake/: GetGitRevisionDescription.cmake
sputnik/media/: properties.dtd  sputnik-config.xml.in
sputnik/media/models/: .gitignore  arcParticle-small.blend  arcParticle.blend  icosphere.blend  monkey.blend  sphere1.blend  sphere2.blend  sphere3.blend  sphere4.blend
sputnik/media/shaders/: arc.frag  arc.vert  arch.frag  arch.vert  base.frag  base.vert  clear.frag  clear.vert  stars.frag  textLabel.frag  textLabel.vert
sputnik/src/: CMakeLists.txt  Kocmoc.cpp  Kocmoc.hpp  Sputnik.cpp  Sputnik.hpp  kocmoc-main.cpp  sputnik-main.cpp  version.cpp  version.hpp.in
sputnik/src/component/: ArcBehaviour.cpp  ArcBehaviour.hpp  Arch.cpp  Arch.hpp  ArchBehaviour.cpp  ArchBehaviour.hpp  CameraDistToMidi.hpp  Monkey.cpp  Monkey.hpp  MonkeyBehaviour.cpp  MonkeyBehaviour.hpp  MonkeyBehavour.cpp  MonkeyController.cpp  MonkeyController.hpp  OriginDistToMidi.cpp  OriginDistToMidi.hpp  OriginDrag.cpp  OriginDrag.hpp  PlayerBehaviour.cpp  PlayerBehaviour.hpp  PulseSize.hpp  SamplerBehaviour.cpp  SamplerBehaviour.hpp  Selectable.cpp  Selectable.hpp  Ship.cpp  Ship.hpp  ShipBehaviour.cpp  ShipBehaviour.hpp  ShipController.cpp  ShipController.hpp  SpeedToMidi.cpp  SpeedToMidi.hpp  StarField.cpp  StarField.hpp  TextLabel.cpp  TextLabel.hpp  WiimoteCameraController.cpp  WiimoteCameraController.hpp  WiimoteDebugger.cpp  (+1 more)
sputnik/src/input/: WiimoteEventListener.hpp  WiimoteInputManager.cpp  WiimoteInputManager.hpp
sputnik/src/object/: Arc.cpp  Arc.hpp  Arch.cpp  Arch.hpp  Monkey.cpp  Monkey.hpp  Player.cpp  Player.hpp  Sampler.cpp  Sampler.hpp  TapeMachine.cpp  TapeMachine.hpp  Text.cpp  Text.hpp  WayPoint.cpp  WayPoint.hpp  WeightTest.cpp  WeightTest.hpp
sputnik/src/output/: MIDIOut.cpp  MIDIOut.hpp  MusicControlOut.hpp
sputnik/src/scene/: Generator.cpp  Generator.hpp  Selectable.hpp  SelectableWorld.cpp  SelectableWorld.hpp
